# OPEN-UMA-Rover

./: .gitmodules  README.md  ROS2UMARov.py
Electrical/: PCB.brd  PCB.sch  README.md
Images/: README.md
Impresiones Rover/: SoporteRasp3.1.STL  SoporteRasp3.SLDPRT  SoporteRasp3.STL  bateria.SLDPRT  caja_principal.SLDPRT
Impresiones/Engranajes Correa/: Engranaje.SLDPRT
Libraries/: README.md
Materials/: Material.xlsx  Materials.csv  Materials.xlsx  README.md
Materials/Impresiones/: SoporteRasp3.1.SLDPRT  gps_corregido.SLDPRT  imu_corregido.SLDPRT  imu_holder.stl  tapa_principal.SLDPRT
OpenUMAModelExtended/: README.md
OpenUMAModelExtended/launch/: tb3_simulation_launch_open_uma_extended.py
OpenUMAModelExtended/worlds/: Open_UMA_Extended.model
OpenUMARov/: OpenUMARov.ino
SDF_URDF/: openuma.urdf
Software/: README.md  RoverGPS.slx
Software/Arduino/OpenUMARov/: OpenUMARov.ino
Software/LabVIEW/: Control 1.ctl  openUMARov.vi
Software/RoverGPS/: RoverGPS.ino
Software/SDF_URDF/: model.sdf
Software/rov_node_pkg/: package.xml  setup.cfg
basic_mobile_robot/: CMakeLists.txt  package.xml
basic_mobile_robot/launch/: basic_mobile_bot_v1.launch.py  launch_sdf_into_gazebo.launch.py
basic_mobile_robot/models/: basic_mobile_bot_v1.urdf
basic_mobile_robot/models/basic_mobile_bot_description/: model.config  model2.sdf
basic_mobile_robot/rviz/: urdf_config.rviz
openUMARov/: openUMARov.ino
rov_node_pkg/: setup.py
rov_node_pkg/rov_node_pkg/: ROS2UMARov.py
teleop_twist_joy/config/: ps3.config.yaml
teleop_twist_joy/src/: teleop_twist_joy.cpp
(+28 files in other folders)
